--- a/src/CSS/Nav.css
+++ b/src/CSS/Nav.css
@@ -2,6 +2,20 @@ ul {
   list-style-type: none;
   display: flex;
   margin: 0;
+  padding: 0;
   left: 0;
   justify-content: space-between;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:visited {
+  color: black;
+}
+
+a.active {
+  text-decoration: underline;
 }
